--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
           <input id="id">
         </div>
         
-        <button>Check ID</button>
+        <button id="checkIdBtn">Check ID</button>
       </div>
   </body>
   <script type="module" src="/scripts/app.js"></script>
