check polls is working as intended now | login feature and vote functionalities still needs to be developed

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
 
       <div class="loginBox">
         <label for="login"><h1>Login:</h1></label>
+        <p>You need to login in order to vote</p>
         <input type="text" name="login" id="login-loginBox" placeholder="Paste your ID here">
         <button>Login</button>
         <button>Logout</button>
@@ -74,4 +75,5 @@
   <script type="module" src="/scripts/app.js"></script>
   <script src="/scripts/addPollField.js"></script>
   <script type="module" src="/scripts/showPolls.js"></script>
+  <script type="module" src="/scripts/login.js"></script>
 </html>
