--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,31 @@
 
     </div>
   </body>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.3.0/firebase-app.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/9.3.0/firebase-firestore.js";
+    import { collection, addDoc, doc, setDoc, getDocs, updateDoc, getDoc, arrayUnion, query } from "https://www.gstatic.com/firebasejs/9.3.0/firebase-firestore.js"; 
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyBMhWYQ75gsw3JO76VvPrjHpBUx6V79124",
+      authDomain: "votefirestore.firebaseapp.com",
+      projectId: "votefirestore",
+      storageBucket: "votefirestore.appspot.com",
+      messagingSenderId: "248399672296",
+      appId: "1:248399672296:web:b2ba5ecc0e139ed8472a5d"
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore();
+  </script>
   <script type="module" src="/scripts/app.js"></script>
-  <script src="/scripts/addPollField.js"></script>
+  <script type="module" src="/scripts/addPollField.js"></script>
   <script type="module" src="/scripts/showPolls.js"></script>
   <script type="module" src="/scripts/login.js"></script>
+  <script type="module" src="/scripts/vote.js"></script>
 </html>
