--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,7 @@
   <script type="module" src="/scripts/app.js"></script>
   <script type="module" src="/scripts/addPollField.js"></script>
   <script type="module" src="/scripts/showPolls.js"></script>
+  <script type="module" src="/scripts/validVoteCheck.js"></script>
   <script type="module" src="/scripts/login.js"></script>
   <script type="module" src="/scripts/vote.js"></script>
 </html>
