--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,6 @@
       </div>
 
     </div>
-
     <div class="createdPolls">
       <h1>Created Polls</h1>
       
@@ -97,7 +96,7 @@
   <script type="module" src="/scripts/app.js"></script>
   <script type="module" src="/scripts/addPollField.js"></script>
   <script type="module" src="/scripts/showPolls.js"></script>
-  <script type="module" src="/scripts/validVoteCheck.js"></script>
   <script type="module" src="/scripts/login.js"></script>
   <script type="module" src="/scripts/vote.js"></script>
+  <script type="module" src="/scripts/showPollResults.js"></script>
 </html>
