poll results are showing without any further problems to the user

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         <button id="createPollBtn">Create Poll</button>
       </div>
     
-      <div class="idCheck">
+      <div class="idCheck" style="display: none">
         <h1>Check Polls</h1>
     
         <div class="inputBlock">
