design is ready | still needs some user interaction and feedback when the vote is registered before deployment

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Quantico&display=swap" rel="stylesheet">
   </head>
   <body>
-      
+    <h1 id="title">😎 Polls-3000 😎</h1>
+    <div class="shiaDoIt">
+      <img src="/images/shiadoit.gif" alt="DO IT!">
+    </div>
     <div class="userInteraction"> 
       <div class="newUser">
         <h1>CREATE A NEW USER</h1>
@@ -68,7 +71,7 @@
     </div>
 
     <div class="createdPolls">
-      <h1>Polls created by users</h1>
+      <h1 class="pollCounter">Polls created by users</h1>
       <div class="content"></div>
     </div>
 
