fixed some prod bugs, such as votes not counting | fixed poll that could be created with empty fields | improved user creation for mobile users

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,11 @@
           <input id="lastName">
         </div>
         <button>Create User</button>
+
+        <div class="newUserInfo">
+          <h3 class="userCreatedID">Your ID:</h3>
+          <p id="UserID">Your ID will be shown here after the creation.Store it somewhere in your PC for using later.</p>
+        </div>
       </div>
     
       <div class="createPoll">
@@ -63,7 +68,7 @@
       </div>
 
       <div class="loginBox">
-        <label for="login"><h1>Login:</h1></label>
+        <label for="login"><h1>LOGIN:</h1></label>
         <p>You need to login in order to vote. Users can vote only once each poll.</p>
         <input type="text" name="login" id="login-loginBox" placeholder="Paste your ID here">
         <button>Login</button>
